Реализован микросервис dossier Добавлены новые api в микросервис deal реализовано взаимодействие через kafka между deal и dossier Вся логика микросервисов залоггирована
