# deal/src/main/java/ru/neoflex/deal/controller/DealControllerImpl.java
@@ -3,6 +3,7 @@ package ru.neoflex.deal.controller;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.openapitools.api.DealApi;
+import org.openapitools.model.ApplicationDTO;
 import org.openapitools.model.FinishRegistrationRequestDTO;
 import org.openapitools.model.LoanApplicationRequestDTO;
 import org.openapitools.model.LoanOfferDTO;
@@ -39,19 +40,35 @@ public class DealControllerImpl implements DealApi {
 
     @Override
     public ResponseEntity<Void> sendDocuments(Long applicationId) {
+        log.info("sendDocuments(), applicationId = {}", applicationId);
         dealService.sendDocuments(applicationId);
         return ResponseEntity.ok().build();
     }
 
     @Override
     public ResponseEntity<Void> signDocuments(Long applicationId) {
+        log.info("signDocuments(), applicationId = {}", applicationId);
         dealService.signDocuments(applicationId);
         return ResponseEntity.ok().build();
     }
 
     @Override
-    public ResponseEntity<Void> signDocumentsSesCode(Long applicationId) {
-        dealService.signDocumentsSesCode(applicationId);
+    public ResponseEntity<Void> signDocumentsSesCode(Long applicationId, String sesCode) {
+        log.info("signDocumentsSesCode(), applicationId = {}, sesCode = {}", applicationId, sesCode);
+        dealService.signDocumentsSesCode(applicationId, sesCode);
+        return ResponseEntity.ok().build();
+    }
+
+    @Override
+    public ResponseEntity<ApplicationDTO> getApplication(Long applicationId) {
+        log.info("getApplication(), applicationId = {}", applicationId);
+        return ResponseEntity.ok(dealService.getApplication(applicationId));
+    }
+
+    @Override
+    public ResponseEntity<Void> updateStatus(Long applicationId, String status) {
+        log.info("updateStatus(), applicationId = {}, status = {}", applicationId, status);
+        dealService.updateStatus(applicationId, status);
         return ResponseEntity.ok().build();
     }
 }
