# deal/src/main/resources/openapi/openapi.yml
@@ -113,12 +113,189 @@ paths:
           schema:
             type: integer
             format: int64
+      requestBody:
+        required: true
+        content:
+          text/plain:
+            schema:
+              type: string
+      responses:
+        200:
+          description: OK
+
+  /deal/admin/application/{applicationId}:
+    get:
+      tags:
+        - deal
+      summary: получить заявку по id
+      operationId: getApplication
+      parameters:
+        - name: applicationId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ApplicationDTO"
+
+  /deal/admin/application/{applicationId}/status:
+    put:
+      tags:
+        - deal
+      summary: изменить статус заявки
+      operationId: updateStatus
+      parameters:
+        - name: applicationId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        content:
+          text/plain:
+            schema:
+              type: string
       responses:
         200:
           description: OK
 
 components:
   schemas:
+    ApplicationDTO:
+      type: object
+      required:
+        - firstName
+        - lastName
+        - email
+        - birthdate
+        - passportSeries
+        - passportNumber
+        - passportIssueDate
+        - passportIssueBranch
+        - gender
+        - maritalStatus
+        - dependentAmount
+        - employment
+        - account
+        - amount
+        - term
+        - monthlyPayment
+        - rate
+        - psk
+        - isInsuranceEnabled
+        - isSalaryClient
+        - paymentSchedule
+        - employmentStatus
+        - employerINN
+        - salary
+        - workExperienceTotal
+        - workExperienceCurrent
+        - status
+        - creationDate
+        - appliedOffer
+        - signDate
+        - sesCode
+        - statusHistory
+      properties:
+        firstName:
+          type: string
+          minLength: 2
+          maxLength: 30
+          pattern: ^[a-zA-Z]+$
+        lastName:
+          type: string
+          minLength: 2
+          maxLength: 30
+          pattern: ^[a-zA-Z]+$
+        middleName:
+          type: string
+          minLength: 2
+          maxLength: 30
+          pattern: ^[a-zA-Z]+$
+        email:
+          type: string
+          pattern: ^[\w\.]{2,50}@[\w\.]{2,20}
+        birthdate:
+          type: string
+          format: date
+        passportSeries:
+          type: string
+          minLength: 4
+          maxLength: 4
+          pattern: ^[0-9]+$
+        passportNumber:
+          type: string
+          minLength: 6
+          maxLength: 6
+          pattern: ^[0-9]+$
+        passportIssueDate:
+          type: string
+          format: date
+        passportIssueBranch:
+          type: string
+        gender:
+          type: string
+        maritalStatus:
+          type: string
+        dependentAmount:
+          type: integer
+        employmentStatus:
+          type: string
+        employerINN:
+          type: string
+        salary:
+          type: number
+        position:
+          type: string
+        workExperienceTotal:
+          type: integer
+        workExperienceCurrent:
+          type: integer
+        account:
+          type: string
+        amount:
+          type: number
+        term:
+          type: integer
+        monthlyPayment:
+          type: number
+        rate:
+          type: number
+        psk:
+          type: number
+        isInsuranceEnabled:
+          type: boolean
+        isSalaryClient:
+          type: boolean
+        paymentSchedule:
+          type: array
+          items:
+            $ref: "#/components/schemas/PaymentScheduleElement"
+        status:
+          type: string
+        creationDate:
+          type: string
+          format: date
+        appliedOffer:
+          $ref: "#/components/schemas/LoanOfferDTO"
+        signDate:
+          type: string
+          format: date
+        sesCode:
+          type: string
+        statusHistory:
+          type: array
+          items:
+            $ref: "#/components/schemas/ApplicationStatusHistoryDTO"
+
     LoanApplicationRequestDTO:
       type: object
       required:
